Update AdminCommand.java